fix/g-e: user menu position oustide navbar flux on mobile

--- a/assets/styles/custom-theme.scss
+++ b/assets/styles/custom-theme.scss
@@ -33,6 +33,9 @@ header {
 	.form-control, form svg {
 		color: var(--bs-secondary);
 	}
+	.navbar-nav .dropdown-menu {
+		position: absolute;
+	}
 	.navbar-toggler {
 		border: none;
 		padding: 0;
